--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "mini-css-extract-plugin": "^1.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "sariska-media-transport": "git+https://github.com/SariskaIO/sariska-media-transport.git"
+    "sariska-media-transport": "git+https://github.com/SariskaIO/sariska-media-transport.git#bk--ts"
   },
   "scripts": {
     "webpack-dev-server": "webpack-dev-server",
@@ -18,11 +18,6 @@
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
-    "@babel/plugin-proposal-class-properties": "7.1.0",
-    "@babel/plugin-proposal-export-namespace-from": "7.0.0",
-    "@babel/plugin-proposal-optional-chaining": "7.2.0",
-    "@babel/plugin-transform-flow-strip-types": "7.0.0",
-    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "7.1.0",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
