--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "mini-css-extract-plugin": "^1.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "sariska-media-transport": "git+https://github.com/SariskaIO/sariska-media-transport.git"
+    "sariska-media-transport": "git+https://github.com/SariskaIO/sariska-media-transport.git#bk--ts"
   },
   "scripts": {
     "webpack-dev-server": "webpack-dev-server",
